--- a/css/homepage.css
+++ b/css/homepage.css
@@ -9,7 +9,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: grey;
+  background-color:salmon;
   padding: 10px;
   margin-bottom: 30px;
   
@@ -115,7 +115,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  background-color: grey;
+  background-color: salmon;
   height: 100px;
   margin-bottom: 20px;
 }
