--- a/css/sales.css
+++ b/css/sales.css
@@ -14,7 +14,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: grey;
+  background-color: salmon;
   padding: 10px;
   margin-bottom: 30px;
   
@@ -61,76 +61,13 @@ main section:nth-child(1) img:hover .imagetext {opacity: 1;
 text-align: justify;}
 
 
-main section:nth-child(2) {
+.form-container {
   width: 102%;
   display: flex;
-  justify-content: center;
-}
-main section:nth-child(2) img {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  margin-right: 30px;
-margin-bottom: 30px;
-  /* opacity: 1; */
-}
-/* main section:nth-child(2) img:hover {opacity: .3;} */
-
-main section:nth-child(3) {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-main section:nth-child(3) article {
-  width: 450px;
-  display: flex;
+  align-items: center;
   flex-direction: column;
 }
-main section:nth-child(3) img {
-  color-adjust: black;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  /* opacity: 1; */
-}
-/* main section:nth-child(3) img:hover {opacity: .3;} */
-
-main section:nth-child(3) article h3 {
-  margin-bottom: 5px;
-}
-main section:nth-child(3) article p {
-  width: 100%;
-  overflow: scroll;
-  height: 345px;
-  margin-bottom: 5px;
-}
-main section:nth-child(3) article button {
-  background-color: black;
-  color: white;
-  height: 30px;
-  width: 130px;
-  margin-bottom: 20px;
-  opacity: .4;
-  transition: .350s;
-  
-}
-main section:nth-child(3) article button:hover {opacity: 1;}
-
-
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  background-color: grey;
-  height: 100px;
-  margin-bottom: 20px;
-}
-footer h3 {
-  align-items: baseline;
+.submit-button {
+  width: 20px;
 }
 
-.contact {
-  opacity: 1;
-}
-.contact:hover {
-  opacity: .5;
-}
