--- a/css/sales.css
+++ b/css/sales.css
@@ -1,73 +1,96 @@
-header img {
-  opacity: 1;
+body {
+  width: auto;
+  height: auto;
 }
-header img:hover {
-  opacity: .5;
+
+main {
+  margin-bottom: 15%;
 }
-header {
+
+/* Styling for Main Section */
+.main-heading h1 {
+  font-family: 'Bebas Neue';
+  font-size: 24px;
+  font-weight: bold;
+  background-color: lightblue;
   width: 100%;
-  display: flex;
+}
 
-}
-nav {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: salmon;
-  padding: 10px;
-  margin-bottom: 30px;
-  
-}
-nav a {
-  width: 20%;
-  
-}
-nav img {
-  width: 50%;
-  display: flex;
-  margin-right: 35px;
-  opacity: 1;
-}
-nav img:hover {opacity: .3;}
-
-
-nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
-  align-items: center;
-}
-nav ul li {
+.main-heading p {
+  font-family: 'Bebas Neue';
   font-size: 16px;
-  width: 76px;
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
+  font-weight: bold;
+  background-color: lightblue;
+  width: 100%;
+  margin-bottom: 20px;
 }
-/* Sty ling for Section 1 with the large Image*/
-main section:nth-child(1) {
+/* End Styling Main Section */
+
+
+/* Styling for Table */
+.Table.Container {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
-main section:nth-child(1) img {
-  opacity: 1;
+
+#city {
+  border: 3px solid salmon;
+  background-color: lightblue;
 }
-.imagetext {
-  opacity: 0;
-}
-main section:nth-child(1) img:hover {opacity: .3;}
-main section:nth-child(1) img:hover .imagetext {opacity: 1;
-text-align: justify;}
+
+#city th {
+  border: 3px solid salmon;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 
 
+}
+
+#city tr {
+  border: 3px solid salmon;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+
+
+}
+
+#city td {
+  padding: 5px;
+  border: 3px solid salmon;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+
+}
+/* End Styling Table */
+
+/* Styling for Form */
 .form-container {
   width: 102%;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
+
+.form-container h1 {
+
+  font-family: 'Bebas Neue';
+  font-size: 24px;
+  font-weight: bold;
+  background-color: lightblue;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 .submit-button {
   width: 20px;
 }
+/* End Styling form */
 
+
+/* Styling Footer */
+footer {
+  width: 100%;
+  display: flex;
+  align-items: stretch;
+}
+/* End Styling Footer */
